--- a/SafeStay.html
+++ b/SafeStay.html
@@ -17,7 +17,7 @@
         <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false">
             </script>
-        <script src="jquery.js"></script>
+        <script src="assets/jquery.js"></script>
         <script type="text/javascript">
             function initialize() {
                 var mapOptions = {
