--- a/SafeStay.html
+++ b/SafeStay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
             <style type="text/css">
                 html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
                 </style>
