--- a/SafeStay.html
+++ b/SafeStay.html
@@ -149,7 +149,7 @@
                 '<br>Price: <b>'+ this.price + '</b>' +
                 
                 '<br><a href="http://www.expedia.com/Hotels" target="_blank">Make Reservation</a><br>'+
-                '<a href="http://www.expedia.com/Flights" target=:_blank">Book Flight</a><br>'+
+                '<a href="http://www.expedia.com/Flights" target="_blank">Book Flight</a><br>'+
                 '<br><button type="button" id="modal-button" class="btn btn-info" data-toggle="modal" data-target="#modal-box">Safety Statistics</button><br></div>')
                 infowindow.open(map,this);
                 });
