--- a/landing.html
+++ b/landing.html
@@ -8,7 +8,20 @@
         <link href='http://fonts.googleapis.com/css?family=Lobster+Two:400,400italic,700italic' rel='stylesheet' type='text/css'>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="assets/style.css">
-        <script src="assets/javascript.js"></script>   
+        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+
+        <script src="assets/javascript.js"></script>  
+        <script>
+  $(function() {
+    $( "#datepicker" ).datepicker();
+  });
+  </script>
+  <script>
+  $(function() {
+    $( "#datepicker2" ).datepicker();
+  });
+  </script>
     </head>
 
     <body>
@@ -18,6 +31,34 @@
                 <input type="text" id="enter-city" placeholder="Enter a city">
                 <div class="glyphicon glyphicon-search"></div>
             </div>
+            <div id="pick-dates">
+               <div class="container" id="date-container">
+                <span>Date: <input type="text" id="datepicker" placeholder="Check-in date"></span>
+                <span>Date: <input type="text" id="datepicker2" placeholder="Check-out date"></span>
+<!--     <div class="row">
+        <div class='col-sm-6'>
+            <div class="form-group">
+                <div class='input-group date' id='datetimepicker1'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker();
+            });
+        </script>
+    </div>
+</div> -->
+            </div>
+           <!--  <div id="search-buttons">
+                <button type="button" id="customize-button" class="btn btn-info">Customize Safety Critera/button>
+                <button type="button" id="default-button" class="btn btn-info">Search/button>
+            </div> -->
+            <div>
         </div>
 
     </body>
