--- a/landing.html
+++ b/landing.html
@@ -33,8 +33,8 @@
             </div>
             <div id="pick-dates">
                <div class="container" id="date-container">
-                <span>Date: <input type="text" id="datepicker" placeholder="Check-in date"></span>
-                <span>Date: <input type="text" id="datepicker2" placeholder="Check-out date"></span>
+                <span>In: <input type="text" id="datepicker" placeholder="Check-in date"></span>
+                <span>Out: <input type="text" id="datepicker2" placeholder="Check-out date"></span>
 <!--     <div class="row">
         <div class='col-sm-6'>
             <div class="form-group">
